# LongMemCode

./: .gitignore  Cargo.toml  LICENSE  README.md  SCOREBOARD.md
adapters/argosbrain/: Cargo.toml
adapters/argosbrain/src/: main.rs
adapters/grep-baseline/: Cargo.toml
adapters/grep-baseline/src/: main.rs
adapters/mem0/: README.md  adapter.py
adapters/sbert-faiss/: README.md  adapter.py
corpora/: 0.sh  README.md  afnetworking.sh  alamofire.sh  bats-core.sh  clap.sh  commons-lang.sh  dart-collection.sh  dawn.sh  distributions-jl.sh  dplyr.sh  fastapi.sh  fastify.sh  fstoolkit.sh  gin.sh  kubernetes.sh  leveldb.sh  luasocket.sh  mediatr.sh  okhttp.sh  openzeppelin.sh  pagila.sh  php-stdlib.sh  plug.sh  psscriptanalyzer.sh  rack.sh  rails-guides.sh  ratpack.sh  redis.sh  ruby-stdlib.sh  saltstack.sh  scala-library.sh  scopt.sh  symfony-console.sh  tf-aws-vpc.sh  trpc.sh
docs/: ADAPTER_PROTOCOL.md  METHODOLOGY.md  TAXONOMY.md  V0.2_KUBERNETES_REPORT.md  V0.2_METHODOLOGY.md  V0.3_METHODOLOGY.md
results/: HISTORY.md  README.md  argosbrain-afnetworking-2026-04-21.json  argosbrain-afnetworking-2026-04-21.jsonl  argosbrain-alamofire-2026-04-21.json  argosbrain-alamofire-2026-04-21.jsonl  argosbrain-bats-core-2026-04-21.json  argosbrain-bats-core-2026-04-21.jsonl  argosbrain-clap-2026-04-20.json  argosbrain-clap-2026-04-20.jsonl  argosbrain-commons-lang-2026-04-21.json  argosbrain-commons-lang-2026-04-21.jsonl  argosbrain-dart-collection-2026-04-21.json  argosbrain-dart-collection-2026-04-21.jsonl  argosbrain-dawn-2026-04-21.json  argosbrain-dawn-2026-04-21.jsonl  argosbrain-distributions-jl-2026-04-21.json  argosbrain-distributions-jl-2026-04-21.jsonl  argosbrain-dplyr-2026-04-21.json  argosbrain-dplyr-2026-04-21.jsonl  argosbrain-fastapi-2026-04-20.json  argosbrain-fastapi-2026-04-20.jsonl  argosbrain-fastify-2026-04-20.json  argosbrain-fastify-2026-04-20.jsonl  argosbrain-fstoolkit-2026-04-21.json  argosbrain-fstoolkit-2026-04-21.jsonl  argosbrain-gin-2026-04-20.json  argosbrain-gin-2026-04-20.jsonl  argosbrain-kubernetes-2026-04-22.json  argosbrain-kubernetes-2k.json  argosbrain-kubernetes-500.json  argosbrain-kubernetes-phase0.json  argosbrain-kubernetes-phase0.jsonl  argosbrain-kubernetes-v2-2026-04-24.json  argosbrain-kubernetes-v3-2026-04-24.json  argosbrain-leveldb-2026-04-21.json  argosbrain-leveldb-2026-04-21.jsonl  argosbrain-luasocket-2026-04-21.json  argosbrain-luasocket-2026-04-21.jsonl  argosbrain-mediatr-2026-04-21.json  (+113 more)
runners/lmc-runner/: Cargo.toml
runners/lmc-runner/src/: main.rs
scenarios/: afnetworking.json  alamofire.json  bats-core.json  clap.json  commons-lang.json  dart-collection.json  dawn.json  distributions-jl.json  dplyr.json  fastapi.json  fastify.json  fstoolkit.json  gin.json  kubernetes-2k.json  kubernetes-500.json  kubernetes-phase0.json  kubernetes-v2.json  kubernetes-v3.json  leveldb.json  luasocket.json  mediatr.json  okhttp.json  openzeppelin.json  pagila.json  php-stdlib.json  plug.json  psscriptanalyzer.json  python-mini.json  rack.json  rails-guides.json  ratpack.json  redis.json  ruby-stdlib.json  rust-mini.json  saltstack.json  scala-library.json  scopt.json  symfony-console.json  tf-aws-vpc.json  trpc.json
tools/: generate_v2_kubernetes_scenarios.py  oracle_pin_kubernetes.py
tools/scenario_gen/: Cargo.toml
tools/scenario_gen/src/: generators.rs  main.rs
