[workspace]
resolver = "2"
members = [
    "adapters/argosbrain",
    "tools/scenario_gen",
    "runners/lmc-runner",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["CataDef"]
repository = "https://github.com/CataDef/LongMemCode"
publish = false

[workspace.dependencies]
# Product dep — we never modify upstream, only consume Bundle + friends.
# Local path dep during sandbox development; the committed version
# uses a git dep pinned to a neurogenesis commit so downstream users
# get reproducible builds without needing the product checked out
# locally. When publishing this workspace:
#
#     neurogenesis-bundle = { git = "https://github.com/CataDef/neurogenesis", rev = "..." }
#     neurogenesis-ingest = { git = "https://github.com/CataDef/neurogenesis", rev = "..." }
neurogenesis-bundle = { git = "https://github.com/CataDef/neurogenesis", branch = "main" }
neurogenesis-ingest = { git = "https://github.com/CataDef/neurogenesis", branch = "main" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
