[workspace]
resolver = "2"
members = [
    "adapters/argosbrain",
    "adapters/grep-baseline",
    "tools/scenario_gen",
    "runners/lmc-runner",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["CataDef"]
repository = "https://github.com/CataDef/LongMemCode"
publish = false

[workspace.dependencies]
neurogenesis-bundle = { git = "https://github.com/CataDef/neurogenesis", rev = "7211ef4ee820e4e5d4e7e7af57e59dcdb0a44184" }
neurogenesis-ingest = { git = "https://github.com/CataDef/neurogenesis", rev = "7211ef4ee820e4e5d4e7e7af57e59dcdb0a44184" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
