[package]
name = "lmc-adapter-grep"
description = "Grep baseline adapter for LongMemCode — what every coding agent already uses today."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish = false

[[bin]]
name = "lmc-adapter-grep"
path = "src/main.rs"

[dependencies]
neurogenesis-bundle.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
