[package]
name = "lmc-runner"
description = "LongMemCode runner — pipes scenarios to an adapter (JSON-over-stdio), scores results, emits the report."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish = false

[[bin]]
name = "lmc-runner"
path = "src/main.rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
